* Fix issues brought up in r75832 * Really and truly add in a couple files that were supposed to go in with r77898, and fully revert r77860 (which was a reversion of r75832). (Ran previous commit for r77898 from wrong directory. Oops.) * Fixed issue with help box text not being parsed. * Modified help system to remove tooltips and instead open/show hidden boxes.   - I am not happy with this design and future revisions will iterate upon it.   - The biggest problem is everything sitting "on top" of itself.  I dislike this a great deal and plan on changing it to be more aesthetic and natural; however, I wanted to get a version of this in that allowed for cut-and-pasting and solved the text parsing issue.   - With javascript disabled, help text is visible by default. * Remove redundancy in checkboxes * Added i18n entry for "help", which wasn't there for some reason. * Removed references to tipsy library in installer html   - Kept tipsy library in core; this is being used elsewhere.

--- a/skins/common/config.css
+++ b/skins/common/config.css
@@ -6,17 +6,23 @@
 .config-section {
 	margin-top: 2em;
 }
+.config-block {
+	margin-top: 2em;
+	display: block;
 
-.config-label {
-	clear: left;
+}
+.config-block-label {
+	display: block;
+	margin-bottom: .2em;
+}
+.config-block-label label, .config-label {
 	font-weight: bold;
-	width: 10em;
-	float: left;
-	text-align: right;
-	padding-right: 1em;
+	padding-right: .5em;
 	padding-top: .2em;
 }
-
+.config-block-elements {
+	margin-left: 2em;
+}
 .config-block-elements li {
 	list-style: none;
 }
@@ -42,7 +48,7 @@
 .config-page {
 	padding: 0.5em 0.5em 0.5em 2em;
 	margin: 0.5em 0.5em 0.5em 0.5em;
-	border: 1px solid #aaa;
+	background: #eee;
 }
 
 .config-submit {
@@ -84,29 +90,6 @@
 
 .config-page-current {
 	font-weight: bold;
-}
-
-.config-help-wrapper {
-	clear: left;
-	margin: 0 0 2em 12em;
-	padding-top: 1em;
-}
-.config-show-help, .config-hide-help {
-	margin-left: 14em;
-}
-.config-hide-help { display: none; }
-.config-show-help a, .config-hide-help a {
-	background-image: url(images/help-22.png);
-	background-position: 0 0;
-	background-repeat: no-repeat;
-	display: inline-block;
-	height: 26px;
-	padding-left: 26px;
-}
-
-.config-help-message {
-	font-size: 85%;
-	display: none;
 }
 
 .config-message {
@@ -159,7 +142,7 @@
 .config-cc-wrapper {
 	clear: left;
 	/* If you change this height, also change it in WebInstaller_Options::submitCC() */
-	height: 54em; 
+	height: 54em;
 }
 
 .config-plainlink a {
